--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "nbformat>=5.10.4",
     "numpy>=2.3.3",
     "pandas>=2.3.2",
+    "peft>=0.17.1",
     "plotly>=6.3.0",
     "pre-commit>=4.3.0",
     "seaborn>=0.13.2",
