--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,6 +1,6 @@
 wandb:
   project: digehealth
-  run_name: 10_epochs
+  run_name: lora_10_epochs_f1
 
 data:
   annotation_paths:
@@ -12,8 +12,8 @@ data:
 train:
   hf_model_id: mharvill23/hubert-xlarge-bowel-sound-detector
   num_labels: 4
-  batch_size: 32
-  learning_rate: 0.001
+  batch_size: 16
+  learning_rate: 1e-5
   num_epochs: 10
   num_workers: 4
   train_split_size: 0.8
@@ -22,6 +22,20 @@ train:
 
 checkpoint:
   load_checkpoint: True
-  checkpoint_path: /home/ubuntu/other/digehealth-poc/outputs/checkpoints/2025-09-26_01-17-41/training_history.pt
+  checkpoint_path: /home/ubuntu/other/digehealth-poc/outputs/checkpoints/2025-09-26_11-23-10/checkpoint_epoch20_step0.pt
 
 output_dir: /home/ubuntu/other/digehealth-poc/outputs
+
+
+lora_config:
+  r: 8
+  lora_alpha: 32
+  lora_dropout: 0.1
+  target_modules:
+    - q_proj
+    - v_proj
+    - k_proj
+    - out_proj
+    - intermediate_dense
+    - output_dense
+  bias: none
